--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -53,9 +54,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "gh-pages": "^5.0.0",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
